--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
     <!-- Contact Section -->
     <section id="contact">
         <h2>Contact</h2>
-        <p>If you wish to get in touch with me, feel free to reach out via the following methods:</p>
+        <p>If , feel free to reach out via the following methods:</p>
         <ul>
             <li>Email: <a href="mailto:saber.rmefteh@gmail.com">saber.rmefteh@gmail.com</a></li>
             <li>Phone: +216 23 337 552</li>
